<resources>
    <string name="app_name">MMS_Project1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mass_kg">Mass (Kg)</string>
    <string name="mms_lab_1">MMS: LAB_1</string>
    <string name="string_mms_lab_1" />
    <string name="height_cm">Height (Cm)</string>
    <string name="count">Count</string>
    <string name="bmi">BMI</string>
    <string name="press_count_to_calculate">Press Count to Calculate</string>
    <string name="change_to_kg">Change to KG</string>
    <string name="change_to_ls">Change to Ls</string>
    <string name="mode_european">Mode: European.</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="status">Status</string>
    <string name="press_result_to_details">Press result to details</string>
</resources>