<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="40dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mms_lab_1"
        android:textSize="24sp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_european" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mass_kg"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#78909C"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/height_cm"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="#78909C"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Count_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="CountClick1"
            android:text="@string/count" />

        <TextView
            android:id="@+id/PressToCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/press_count_to_calculate"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/status"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/BMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bmi"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>